--- a/index.html
+++ b/index.html
@@ -20,179 +20,218 @@
   <body>
     <!-- Header -->
     <header class="page-headder">
-      <nav>
-        <a lang="en" class="link logo-studio-headder" href="/"
-          ><span class="link logo-web">Web</span>Studio</a
-        >
-        <!-- Site-nav -->
-        <ul class="list site-nav">
-          <li><a href="./index.html" class="link site-nav-link">Студия</a></li>
-          <li>
-            <a href="./portfolio.html" class="link site-nav-link">Портфолио</a>
+      <div class="container headder">
+        <nav class="navigation">
+          <div class="logo">
+            <a lang="en" class="link logo-studio-headder" href="/"
+              ><span class="link logo-web">Web</span>Studio</a
+            >
+          </div>
+          <!-- Site-nav -->
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="./index.html" class="current link site-nav-link"
+                >Студия</a
+              >
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link site-nav-link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="item">
+              <a href="" class="link site-nav-link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <ul class="list contacts">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link contacts-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="" class="link site-nav-link">Контакты</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link contacts-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <!-- Contacts -->
-      <ul class="list contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contacts-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link contacts-link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
-        <!-- Advantages -->
+        <div class="container">
+          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button">Заказать услугу</button>
+          <!-- Advantages -->
+        </div>
       </section>
-      <section class="advantage-section">
-        <h2 hidden class="title">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3 class="list-item-title">Внимание к деталям</h3>
-            <p class="list-item-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-item-title">Пунктуальность</h3>
-            <p class="list-item-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-item-title">Планирование</h3>
-            <p class="list-item-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-item-title">Современные технологии</h3>
-            <p class="list-item-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section advantage-section">
+        <div class="container">
+          <h2 class="title visually-hidden">Наши преимущества</h2>
+          <ul class="list">
+            <li class="item">
+              <h3 class="list-item-title">Внимание к деталям</h3>
+              <p class="list-item-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="list-item-title">Пунктуальность</h3>
+              <p class="list-item-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="list-item-title">Планирование</h3>
+              <p class="list-item-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="list-item-title">Современные технологии</h3>
+              <p class="list-item-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Work -->
-      <section class="work-section">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="Человек работающий на компьютере"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="Человек с мобильным телефоном"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="Человек рисующий на планшете"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="section work-section">
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-1.jpg"
+                alt="Человек работающий на компьютере"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-2.jpg"
+                alt="Человек с мобильным телефоном"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-3.jpg"
+                alt="Человек рисующий на планшете"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team -->
-      <section class="team-section">
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img-1-1.jpg"
-              alt="Мужчина с бородой в очках"
-              width="270"
-              height="260"
-            />
-            <h3 class="list-title">Игорь Демьяненко</h3>
-            <p class="list-title-text" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-2-2.jpg"
-              alt="Девушка блондинка в очках"
-              width="270"
-              height="260"
-            />
-            <h3 class="list-title">Ольга Репина</h3>
-            <p class="list-title-text" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-3-3.jpg"
-              alt="Мужчина в рубашке"
-              width="270"
-              height="260"
-            />
-            <h3 class="list-title">Николай Тарасов</h3>
-            <p class="list-title-text" lang="en">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-4-4.jpg"
-              alt="Мужчина в футболке в очках"
-              width="270"
-              height="260"
-            />
-            <h3 class="list-title">Михаил Ермаков</h3>
-            <p class="list-title-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-1-1.jpg"
+                alt="Мужчина с бородой в очках"
+                width="270"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="list-title">Игорь Демьяненко</h3>
+                <p class="list-title-text" lang="en">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-2-2.jpg"
+                alt="Девушка блондинка в очках"
+                width="270"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="list-title">Ольга Репина</h3>
+                <p class="list-title-text" lang="en">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-3-3.jpg"
+                alt="Мужчина в рубашке"
+                width="270"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="list-title">Николай Тарасов</h3>
+                <p class="list-title-text" lang="en">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                class="image"
+                src="./images/img-4-4.jpg"
+                alt="Мужчина в футболке в очках"
+                width="270"
+                height="260"
+              />
+              <div class="card-content">
+                <h3 class="list-title">Михаил Ермаков</h3>
+                <p class="list-title-text" lang="en">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a lang="en" class="link logo-studio-footer" href="/"
-        ><span class="link logo-web">Web</span>Studio</a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="link address-link"
-              href="https://goo.gl/maps/rsxk5mHzExy43c3M6"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              г. Киев, пр-т Леси Украинки,26</a
-            >
-          </li>
-          <li>
-            <a class="link mail-link" href="mailto:info@devstudio.com">
-              info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a class="link phone-link" href="tel:+380961111111">
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <div class="logo-footer">
+          <a lang="en" class="link logo-studio-footer" href="/"
+            ><span class="link logo-web">Web</span>Studio</a
+          >
+        </div>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <a
+                class="link address-link"
+                href="https://goo.gl/maps/rsxk5mHzExy43c3M6"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                г. Киев, пр-т Леси Украинки,26</a
+              >
+            </li>
+            <li>
+              <a class="link mail-link" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="link phone-link" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
