Edited html and css files

--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
         </div>
         <address class="address">
           <ul class="list">
-            <li>
+            <li class="item">
               <a
                 class="link address-link"
                 href="https://goo.gl/maps/rsxk5mHzExy43c3M6"
@@ -244,7 +244,7 @@
                 г. Киев, пр-т Леси Украинки,26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a class="link mail-link" href="mailto:info@devstudio.com">
                 info@devstudio.com
               </a>
