--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!-- Advantages -->
         </div>
       </section>
-      <section class="section advantage-section">
+      <section class="advantage-section">
         <div class="container">
           <h2 class="title visually-hidden">Наши преимущества</h2>
           <ul class="list">
@@ -209,7 +209,7 @@
         </div>
         <address class="address">
           <ul class="list">
-            <li>
+            <li class="item">
               <a
                 class="link address-link"
                 href="https://goo.gl/maps/rsxk5mHzExy43c3M6"
@@ -219,7 +219,7 @@
                 г. Киев, пр-т Леси Украинки,26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a class="link mail-link" href="mailto:info@devstudio.com">
                 info@devstudio.com
               </a>
